--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV='dev'
 APP_HOST=http://localhost:3000
 APP_PORT=3000
-MONGODB_URL=mongodb://localhost:27017/secret
+MONGODB_URL=mongodb+srv://elipolak:2Kyg4JI9CDEFl77R@cluster0.ir3uu.mongodb.net/secret?retryWrites=true&w=majority
 
 SECRET_ALGORITHM=aes-256-ctr
 SECRET_KEY = vOVH6sdmpNWjRRIqCc7rdxs01lwHzfr3
